--- a/app/projects/projects.json
+++ b/app/projects/projects.json
@@ -1,51 +1,58 @@
 [
   {
-    "title": "Fluid Simulation",
-    "description": "a particle-based fluid simulation with density estimation, pressure forces, spatial grid optimizations and elastic collisions.",
-    "header": "fluidsim",
-    "icon": "Rust, Bevy",
-    "url": "https://github.com/gulkaran/fluid-simulation"
+    "title": "Resume Tailoring Assistant",
+    "description": "A tool that customizes resume content based on job descriptions, optimizing keyword matching for ATS systems.",
+    "header": "resumeswap",
+    "icon": "React, Node.js",
+    "url": "https://github.com/NathanSkibicki/R-swap"
   },
   {
-    "title": "HandTex (AI Math Symbol Recognition)",
-    "description": "a convolutional neural network to convert handwritten mathematical expressions to LaTeX using AI image detection.",
-    "header": "handtex",
-    "icon": "Python, TensorFlow, OpenCV, React, Typescript",
-    "url": "https://github.com/gulkaran/Handwritten-Math-To-Latex"
+    "title": "Vector Clock",
+    "description": "Interactive vector clock system for managing causal events between servers.",
+    "header": "vectorclock",
+    "icon": "Rust",
+    "url": "https://github.com/NathanSkibicki/vector_clock"
   },
   {
-    "title": "Markdown Documentation",
-    "description": "a markdown powered documentation style website to showcase completed LeetCode problems.",
-    "header": "markdown",
-    "icon": "AWS S3, Lambda, API Gateway, DynamoDB, GitHub Actions",
-    "url": "https://github.com/gulkaran/leetcode"
+    "title": "Prodigy Programmers",
+    "description": "Full stack tutoring service website",
+    "header": "tutor",
+    "icon": "React, Mongodb, Vercel",
+    "url": "https://github.com/NathanSkibicki/Tutoring-signup-website"
   },
   {
-    "title": "byteKode Hackathon",
-    "description": "a non-profit organization which hosted two hackathon events with 200+ beginner programmers attendees.",
-    "header": "bytekode",
-    "icon": "devpost, javascript, html5, css3",
-    "url": "https://bytekodehackathon.devpost.com/"
+    "title": "Inventory Management Service",
+    "description": "gRPC client for an inventory management service with functionality for adding, retrieving, updating, and deleting products.",
+    "header": "grpc",
+    "icon": "gRPC, C++",
+    "url": "https://github.com/NathanSkibicki/Inventory-Management-Service"
   },
   {
-    "title": "YRCodes",
-    "description": "launched an educational computer science learning platform for York Region (YRDSB) students; endorsed by the YRDSB superintendent.",
-    "header": "yrcodes",
-    "icon": "javascript, html5, css3, google prettify",
-    "url": "https://github.com/gulkaran/harishuthayakumargithub.github.io"
+    "title": "Primary Backup Server",
+    "description": "Server implementation with primary-backup replication for fault tolerance.",
+    "header": "primarybackup",
+    "icon": "gRPC, C++",
+    "url": "https://github.com/NathanSkibicki/Primary-Backup-Server"
   },
   {
-    "title": "MemoryBox",
-    "description": "a 3d-modeled memory box to hold up to 8 prerecorded messages for one's birthday or anniversary!",
-    "header": "memorybox",
-    "icon": "Arduino, AutoCAD, Fusion360",
-    "url": "https://github.com/gulkaran/MemoryBox"
+    "title": "Sportek",
+    "description": "Online platform for booking public tennis courts, with Geolocation.",
+    "header": "sportek",
+    "icon": "Next.js, Node.js, Google Maps API",
+    "url": "https://github.com/NathanSkibicki/sportek"
   },
   {
-    "title": "Spiderman Minecraft Mod",
-    "description": "a custom Minecraft mod that implements new loot tables, spiderman armour, new blocks, and more!",
-    "header": "spiderman",
-    "icon": "Java, Fabric, Gradle",
-    "url": "https://github.com/gulkaran/Spiderman-Minecraft-Mod"
+    "title": "Wordle Game",
+    "description": "Recreation of the popular word guessing game in C++.",
+    "header": "wordle",
+    "icon": "C++",
+    "url": "https://github.com/NathanSkibicki/Wordle-Game"
+  },
+  {
+    "title": "Spotify Clone",
+    "description": "Recreation of the popular word guessing game in C++.",
+    "header": "spotify",
+    "icon": "Javascript, Spotify API",
+    "url": "https://github.com/NathanSkibicki/spotify-clone-app"
   }
 ]
